terraform/local-management/values/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: istio-system
spec:
  hosts:
    - "argocd.management.local"
  gateways:
    - istio-ingress-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: harbor-local-portal.harbor.svc.cluster.local
            port:
              number: 80
